--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "type": "commonjs",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel index.html",
+    "build": "parcel index.html"
   },
   "devDependencies": {
     "parcel": "^2.13.3",
